service-mesh/bookinfo-app/bookinfo-igw.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: istio-ingressgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: istio-ingressgateway
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: secret-reader
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
      - name: istio-proxy
        image: auto
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - containerPort: 15021
          name: status-port
          protocol: TCP
        - containerPort: 80
          name: http2
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: bookinfo
spec:
  selector:
    istio: istio-ingressgateway
  ports:
  - name: status-port
    port: 15021
    targetPort: 15021
  - name: http2
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
